--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="message">
             <h1>My Dearest</h1>
 
-            <p>As <span class="main">Valentine’s Day</span> I love you so deeply that you practically dominate my mind
+            <p>Happy <span class="main">Valentine’s Day</span> I love you so deeply that you practically dominate my mind
                 and heart. Even when you’re not in front of me, you’re all I see with my eyes. I think about you
                 constantly, even when I’m asleep. You’ve taken control of me.<BR>
                 My heart beats for you and only you. I live for you. I breathe for you. You are my entire world, my
